--- a/themes/default/css/blog.css
+++ b/themes/default/css/blog.css
@@ -262,27 +262,33 @@ ul.pagination.bl-pagination li:nth-last-child(2) span {
 .post-detail-meta span{
     margin-right: 5px;
 }
-.post-detail-next-post{
+.post-detail-next-post {
     float: right;
     width: 45%;
-    text-align: justify;
+    text-align: right;
     font-weight: bold;
     text-transform: uppercase;
+    position: relative;
+    padding-right: 25px;
 }
-.post-detail-next-post i{
-    float: right;
-    margin-left: 10px;
+.post-detail-next-post i {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
-.post-detail-prev-post{
+.post-detail-prev-post {
     float: left;
     width: 45%;
-    text-align: justify;
+    text-align: left;
     font-weight: bold;
     text-transform: uppercase;
+    position: relative;
+    padding-left: 25px;
 }
-.post-detail-prev-post i{
-    float: left;
-    margin-right: 10px;
+.post-detail-prev-post i {
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 .post-detail-share{
     margin-bottom: 10px;
