Cập nhật module

--- a/src/themes/admin_nv5/css/Blog.css
+++ b/src/themes/admin_nv5/css/Blog.css
@@ -110,3 +110,8 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+#post-markdown-preview {
+    border: 1px #bdc0c7 solid;
+    padding: 20px;
+}
