Cập nhật css cho giao diện chi tiết bài viết

--- a/src/themes/default/css/blog.css
+++ b/src/themes/default/css/blog.css
@@ -298,6 +298,16 @@ ul.pagination.bl-pagination li:nth-last-child(2) span {
     margin-top: 10px;
 }
 
+/* Fix NukeViet default css */
+.post-detail-content ul {
+    list-style-type: disc;
+}
+
+/* Fix NukeViet default css */
+.post-detail-content ol {
+    list-style-type: decimal;
+}
+
 .post-detail-tags {
     margin-bottom: 30px;
 }
